<resources>
    <string name="app_name">HydroSmart</string>
    <string name="item">item</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="Masuk_untuk_terhubung">Masuk ke akunmu untuk kembali terhubung</string>
    <string name="Register_Here">Don\'t have account ? Register Here</string>
    <string name="title_signup_page">Gabung untuk menikmati fitur lainnya</string>
    <string name="name">Name</string>
    <string name="signup">Sign Up</string>
    <string name="Login_here">Already have account ? Login Here</string>
    <string name="title_welcome_page">Welcome to HydroSmart</string>
    <string name="welcome">Welcome !</string>
    <string name="mau_menanam_apa_hari_ini">Mau menanam apa hari ini ?</string>
    <string name="title_activity_main_after">MainActivityAfter</string>
    <string name="title_home">Home</string>
    <string name="title_guide">Guide</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="bt_edit_profile">Edit Profile</string>
    <string name="reminder_title_button">Reminder</string>
    <string name="cancel_reminder_title_bt">Cancel</string>
    <string name="menu_detail_alat_bahan">Alat dan bahan</string>
    <string name="menu_detail_langkah">Langkah budidaya</string>
    <string name="welcome_message_home">Hi, %1$s!</string>
    <string name="welcome_message_plant">Mau menanam apa hari ini?</string>
    <string name="bt_rekomendasi">Butuh Rekomendasi ?</string>
    <string name="tv_menu_plant">Hydroponik Plant</string>
    <string name="tv_title_recom">Rekomendasi</string>
    <string name="tv_title_form">Isi form berikut</string>
    <string name="tv_sub_title">Agar kami dapat memberikan rekomendasi tanaman hidroponik</string>
    <string name="hint_suhu">suhu</string>
    <string name="hint_luas">luas lahan</string>
    <string name="hint_ph">ph</string>
    <string name="hint_kelembapan">kelembapan</string>
    <string name="hint_penyinaran">penyinaran</string>
    <string name="bt_submit">Submit</string>
    <string name="tv_result">Result :</string>
    <string name="text_alarm_set_up">Reminder alarm set up</string>
    <string name="cancel_alarm">Reminder alarm dibatalkan</string>
    <string name="alarm_message">pesan alarm</string>
    <string name="tv_time_clock">Klik gambar jam diatas</string>
    <string name="HydroSmart">HydroSmart</string>
    <string name="reinputpassword">Masukan ulang password</string>
    <string name="username">Username</string>
    <string name="join">Join</string>
    <string name="masuk_gabung">Masuk atau Gabung untuk menikmati fitur lainnya !</string>
</resources>