<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".beforelogin.MainActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:elevation="8dp"
        android:textColor="@color/button_color"
        android:fontFamily="@font/baloo"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/card_view"
        app:layout_constraintStart_toStartOf="@+id/card_view"
        app:layout_constraintTop_toTopOf="@+id/card_view"
        />

    <TextView
        android:id="@+id/tv_maumenanamapa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:elevation="8dp"
        android:textColor="@color/black"
        android:fontFamily="@font/baloo"
        android:text="@string/mau_menanam_apa_hari_ini"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/card_view"
        app:layout_constraintStart_toStartOf="@+id/card_view"
        app:layout_constraintTop_toTopOf="@+id/tv_welcome"
        />

<!--    <TextView-->
<!--        android:id="@+id/tv_Join"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:paddingTop="5dp"-->
<!--        android:paddingBottom="5dp"-->
<!--        android:layout_marginTop="45dp"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:gravity="center"-->
<!--        android:background="@drawable/rounded_background"-->
<!--        android:elevation="8dp"-->
<!--        android:textColor="@color/md_theme_light_primaryContainer"-->
<!--        android:fontFamily="@font/baloo"-->
<!--        android:text="@string/join"-->
<!--        android:textStyle="bold"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/tv_maumenanamapa"-->
<!--        />-->




    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_margin="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:alpha="0.2"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/bt_rekomendasi"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:textSize="20sp"
        android:text="@string/join"
        app:layout_constraintStart_toStartOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/tv_maumenanamapa"
        android:drawableEnd="@drawable/baseline_login_24"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_story"
        tools:listitem="@layout/item_plants"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view"
        />

</androidx.constraintlayout.widget.ConstraintLayout>